; ModuleID = '/home/carl/AnghaBench/no-more-secrets/src/extr_input.c_input_get_from_pipe.c'
source_filename = "/home/carl/AnghaBench/no-more-secrets/src/extr_input.c_input_get_from_pipe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@STDIN_FILENO = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [58 x i8] c"Input data from a piped or redirected source is required.\00", align 1
@.str.1 = private unnamed_addr constant [21 x i8] c"Could not get input.\00", align 1
@.str.2 = private unnamed_addr constant [19 x i8] c"No input provided.\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @input_get_from_pipe(i8** %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8**, align 8
  %4 = alloca i32, align 4
  store i8** %0, i8*** %3, align 8
  %5 = load i32, i32* @STDIN_FILENO, align 4
  %6 = call i64 @isatty(i32 %5)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %10

8:                                                ; preds = %1
  %9 = call i32 @error_log(i8* getelementptr inbounds ([58 x i8], [58 x i8]* @.str, i64 0, i64 0))
  store i32 -1, i32* %2, align 4
  br label %24

10:                                               ; preds = %1
  %11 = load i8**, i8*** %3, align 8
  %12 = call i32 @input_get(i8** %11, i32* null)
  store i32 %12, i32* %4, align 4
  %13 = load i32, i32* %4, align 4
  %14 = icmp slt i32 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %10
  %16 = call i32 @error_log(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.1, i64 0, i64 0))
  store i32 -1, i32* %2, align 4
  br label %24

17:                                               ; preds = %10
  %18 = load i32, i32* %4, align 4
  %19 = icmp eq i32 %18, 0
  br i1 %19, label %20, label %22

20:                                               ; preds = %17
  %21 = call i32 @error_log(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.2, i64 0, i64 0))
  store i32 -1, i32* %2, align 4
  br label %24

22:                                               ; preds = %17
  %23 = load i32, i32* %4, align 4
  store i32 %23, i32* %2, align 4
  br label %24

24:                                               ; preds = %22, %20, %15, %8
  %25 = load i32, i32* %2, align 4
  ret i32 %25
}

declare dso_local i64 @isatty(i32) #1

declare dso_local i32 @error_log(i8*) #1

declare dso_local i32 @input_get(i8**, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
